--- a/Code Files/Analysis and Modelling Code Files/Data_Engineering.ipynb
+++ b/Code Files/Analysis and Modelling Code Files/Data_Engineering.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "4edf5de6",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv(\"..\\\\Clean Data\\\\Datasets\\\\final_dataset.csv\")\n",
+    "df = pd.read_csv(\"C:\\\\Users\\\\Ashish Siwach\\\\OneDrive - University of Exeter\\\\Dissertation_Cld\\\\Datasets\\\\final_dataset.csv\")\n",
     "df.head()"
    ]
   },
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "53ddb145",
    "metadata": {},
    "outputs": [
@@ -275,7 +275,7 @@
     "import seaborn as sns\n",
     "\n",
     "# Load the dataset (ensuring the date column is the index)\n",
-    "df = pd.read_csv('..\\\\Clean Data\\\\Datasets\\\\final_dataset.csv', parse_dates=['date'], index_col='date')\n",
+    "df = pd.read_csv(\"C:\\\\Users\\\\Ashish Siwach\\\\OneDrive - University of Exeter\\\\Dissertation_Cld\\\\Datasets\\\\final_dataset.csv\", parse_dates=['date'], index_col='date')\n",
     "\n",
     "# Set plot style for better aesthetics\n",
     "sns.set_style(\"whitegrid\")\n",
@@ -379,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "a6064917",
    "metadata": {},
    "outputs": [
@@ -473,7 +473,7 @@
     "import pandas as pd\n",
     "\n",
     "# Step 1: Load Data and Set Up\n",
-    "df = pd.read_csv('..\\\\Clean Data\\\\Datasets\\\\final_dataset.csv', parse_dates=['date'], index_col='date')\n",
+    "df = pd.read_csv(\"C:\\\\Users\\\\Ashish Siwach\\\\OneDrive - University of Exeter\\\\Dissertation_Cld\\\\Datasets\\\\final_dataset.csv\", parse_dates=['date'], index_col='date')\n",
     "print(\"Original dataset loaded. Shape:\", df.shape)\n",
     "\n",
     "# Step 2: Create Lag Features\n",
