--- a/Code Files/Analysis and Modelling Code Files/final_merged.ipynb
+++ b/Code Files/Analysis and Modelling Code Files/final_merged.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "b7015100",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "196c00ce",
    "metadata": {},
    "outputs": [
@@ -170,6 +170,7 @@
        "      <th>BEV_Registrations</th>\n",
        "      <th>Total_Vehicle_Registrations</th>\n",
        "      <th>BEV_Share</th>\n",
+       "      <th>Charging_Infrastructure</th>\n",
        "      <th>RHDI_per_head</th>\n",
        "      <th>CPI</th>\n",
        "      <th>Bank_Rate</th>\n",
@@ -190,6 +191,7 @@
        "      <td>54</td>\n",
        "      <td>424100</td>\n",
        "      <td>0.000127</td>\n",
+       "      <td>0</td>\n",
        "      <td>5129.0000</td>\n",
        "      <td>91.3</td>\n",
        "      <td>0.5</td>\n",
@@ -208,6 +210,7 @@
        "      <td>36</td>\n",
        "      <td>360400</td>\n",
        "      <td>0.000100</td>\n",
+       "      <td>0</td>\n",
        "      <td>5088.0000</td>\n",
        "      <td>92.0</td>\n",
        "      <td>0.5</td>\n",
@@ -226,6 +229,7 @@
        "      <td>320</td>\n",
        "      <td>662000</td>\n",
        "      <td>0.000483</td>\n",
+       "      <td>0</td>\n",
        "      <td>5047.0000</td>\n",
        "      <td>92.2</td>\n",
        "      <td>0.5</td>\n",
@@ -244,6 +248,7 @@
        "      <td>320</td>\n",
        "      <td>434400</td>\n",
        "      <td>0.000737</td>\n",
+       "      <td>0</td>\n",
        "      <td>5063.3333</td>\n",
        "      <td>93.2</td>\n",
        "      <td>0.5</td>\n",
@@ -262,6 +267,7 @@
        "      <td>38</td>\n",
        "      <td>447300</td>\n",
        "      <td>0.000085</td>\n",
+       "      <td>0</td>\n",
        "      <td>5079.6667</td>\n",
        "      <td>93.4</td>\n",
        "      <td>0.5</td>\n",
@@ -286,19 +292,19 @@
        "3  2011-04-30                320                       434400   0.000737   \n",
        "4  2011-05-31                 38                       447300   0.000085   \n",
        "\n",
-       "   RHDI_per_head   CPI  Bank_Rate  Petrol_Price  Diesel_Price  \\\n",
-       "0      5129.0000  91.3        0.5        127.40        131.86   \n",
-       "1      5088.0000  92.0        0.5        129.00        134.07   \n",
-       "2      5047.0000  92.2        0.5        132.25        138.43   \n",
-       "3      5063.3333  93.2        0.5        134.29        140.81   \n",
-       "4      5079.6667  93.4        0.5        136.28        141.53   \n",
+       "   Charging_Infrastructure  RHDI_per_head   CPI  Bank_Rate  Petrol_Price  \\\n",
+       "0                        0      5129.0000  91.3        0.5        127.40   \n",
+       "1                        0      5088.0000  92.0        0.5        129.00   \n",
+       "2                        0      5047.0000  92.2        0.5        132.25   \n",
+       "3                        0      5063.3333  93.2        0.5        134.29   \n",
+       "4                        0      5079.6667  93.4        0.5        136.28   \n",
        "\n",
-       "   PiCG_Amount_GBP  picg_active  GT_Awareness_General  \\\n",
-       "0           5000.0            1                    12   \n",
-       "1           5000.0            1                     7   \n",
-       "2           5000.0            1                    10   \n",
-       "3           5000.0            1                     7   \n",
-       "4           5000.0            1                     7   \n",
+       "   Diesel_Price  PiCG_Amount_GBP  picg_active  GT_Awareness_General  \\\n",
+       "0        131.86           5000.0            1                    12   \n",
+       "1        134.07           5000.0            1                     7   \n",
+       "2        138.43           5000.0            1                    10   \n",
+       "3        140.81           5000.0            1                     7   \n",
+       "4        141.53           5000.0            1                     7   \n",
        "\n",
        "   GT_Awareness_Consideration  GT_Infrastructure_Concern  GT_Range_Anxiety  \n",
        "0                           7                         13                 0  \n",
@@ -308,19 +314,19 @@
        "4                           4                          0                 0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('master_dataset.csv')\n",
+    "df = pd.read_csv(\"C:\\\\Users\\\\Ashish Siwach\\\\OneDrive - University of Exeter\\\\Dissertation_Cld\\\\Datasets\\\\master_dataset.csv\")\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "92fe3f1a",
    "metadata": {},
    "outputs": [
@@ -405,7 +411,7 @@
     "        print(f\"An error occurred: {e}\")\n",
     "\n",
     "\n",
-    "MASTER_FILE = \"master_dataset.csv\"\n",
+    "MASTER_FILE = \"C:\\\\Users\\\\Ashish Siwach\\\\OneDrive - University of Exeter\\\\Dissertation_Cld\\\\Datasets\\\\master_dataset.csv\"\n",
     "INFRA_FILE = \"charging_infra_cleaned.csv\"\n",
     "    \n",
     "# Execute the function, saving the result to the same master file\n",
@@ -414,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c802791d",
    "metadata": {},
    "outputs": [
@@ -708,7 +714,7 @@
     }
    ],
    "source": [
-    "df = pd.read_csv('master_dataset.csv')\n",
+    "df = pd.read_csv(\"C:\\\\Users\\\\Ashish Siwach\\\\OneDrive - University of Exeter\\\\Dissertation_Cld\\\\Datasets\\\\master_dataset.csv\")\n",
     "df.head(10)"
    ]
   },
